--- a/hooks/build
+++ b/hooks/build
@@ -5,5 +5,5 @@ declare -a Arch=("amd64" "s390x")
 for arch in "${Arch[@]}"
 do
 	echo "Buiding image for $arch"
-	docker build --build-arg ARCH=$arch -t bagalvitthal/ub_sleeper:$arch .
+	docker build --build-arg ARCH=$arch -t bagalvitthal/ub_sleeper:$arch -f Dockerfile.$arch .
 done
